tests/invalid_inputs/sema/class_member_redeclaration.cpp

struct S {
	int a;
	int a;
}
